[package]
name = "name-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version ="0", features =["http"]}
tokio = { version = "1", features = ["rt-multi-thread"] }
env_logger = "0"
log = "0"
names = { version = "0", default-features = false }
titlecase = "3"
dotenv = "0"