[package]
name = "name-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version ="0.12.1", features =["http"]}
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
env_logger = "0.11.3"
log = "0.4.21"
names = { version = "0.14.0", default-features = false }
titlecase = "3"
dotenv = "0.15.0"